RESOLVED FIXED 254492
[IFC] Incorrect out-of-flow box placement when text-indent is present (display: inline)
https://bugs.webkit.org/show_bug.cgi?id=254492
Summary [IFC] Incorrect out-of-flow box placement when text-indent is present (displa...
zalan
Reported 2023-03-26 17:30:25 PDT
ssia
Attachments
Patch (7.56 KB, patch)
2023-03-26 18:02 PDT, zalan
no flags
[fast-cq]Patch (7.56 KB, patch)
2023-03-27 10:23 PDT, zalan
no flags
zalan
Comment 1 2023-03-26 18:02:38 PDT
zalan
Comment 2 2023-03-27 10:23:23 PDT
Created attachment 465613 [details] [fast-cq]Patch
EWS
Comment 3 2023-03-27 12:57:59 PDT
Committed 262170@main (fd637abec439): <https://commits.webkit.org/262170@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465613 [details].
Radar WebKit Bug Importer
Comment 4 2023-03-27 12:58:18 PDT
Thomas Wisniewski [:twisniewski]
Comment 5 2023-09-28 11:32:51 PDT
zalan, the test-case in the commit here renders quite differently in Firefox and Chrome, and not at all like the expected.html. Is this expected?
zalan
Comment 6 2023-09-28 12:02:37 PDT
(In reply to Thomas Wisniewski [:twisniewski] from comment #5) > zalan, the test-case in the commit here renders quite differently in Firefox > and Chrome, and not at all like the expected.html. Is this expected? Here I was just matching the new inline layout codepath (IFC) with our legacy behavior (in retrospect, I should have named the files accordingly).
Thomas Wisniewski [:twisniewski]
Comment 7 2023-09-28 13:23:53 PDT
Ah, I see, s Chrome and Firefox's behavior is still considered correct, and Safari is considered to be failing this test? Thanks for the clarification!
zalan
Comment 8 2023-09-28 14:11:53 PDT
(In reply to Thomas Wisniewski [:twisniewski] from comment #7) > Ah, I see, s Chrome and Firefox's behavior is still considered correct, and > Safari is considered to be failing this test? I didn't look too closely. Let me look at these tests again.
zalan
Comment 9 2023-09-28 14:17:15 PDT
(In reply to zalan from comment #8) > (In reply to Thomas Wisniewski [:twisniewski] from comment #7) > > Ah, I see, s Chrome and Firefox's behavior is still considered correct, and > > Safari is considered to be failing this test? > I didn't look too closely. Let me look at these tests again. Apparently all the block containers have "text-indent: each line" which, according to caniuse, FireFox does not support yet. No wonder rendering does not match. (this is about testing out-of-flow static positioning with the origin display value of "inline" after the _last_ line with _text_indent_)
Thomas Wisniewski [:twisniewski]
Comment 10 2023-09-28 15:43:02 PDT
Ah, you're right, that certainly does explain why the rendering would be different in Chrome and Firefox. Maybe it's a good time to port these tests over to web platform tests, to further encourage other vendors to finish their implementations as well..
Note You need to log in before you can comment on or make changes to this bug.