[IFC] Incorrect out-of-flow box placement when text-indent is present (display: inline) https://bugs.webkit.org/show_bug.cgi?id=254492

Reviewed by Antti Koivisto.

Take text-ident (mainly each-line) into account when computing the static position for a "display: inline" out-of-flow box
on "overflowing line" after the last line with inline content.

* LayoutTests/fast/inline/out-of-flow-inline-with-text-indent-on-last-line-expected.html: Added.
* LayoutTests/fast/inline/out-of-flow-inline-with-text-indent-on-last-line.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
(WebCore::Layout::InlineFormattingGeometry::lineBoxOffsetAfterLastLine const):
(WebCore::Layout::InlineFormattingGeometry::staticPositionForOutOfFlowInlineLevelBox const):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.h:

Canonical link: https://commits.webkit.org/262170@main